--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <span>$15.99</span>
+            <span>Kes.1200</span>
             <a href="#" class="btn">add to cart</a>
         </div>
 
@@ -142,7 +142,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <span>$15.99</span>
+            <span>Kes.1200</span>
             <a href="#" class="btn">add to cart</a>
         </div>
 
@@ -158,7 +158,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <span>$15.99</span>
+            <span>Kes.1200</span>
             <a href="#" class="btn">add to cart</a>
         </div>
 
@@ -174,7 +174,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <span>$15.99</span>
+            <span>Kes.1200</span>
             <a href="#" class="btn">add to cart</a>
         </div>
 
@@ -190,7 +190,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <span>$15.99</span>
+            <span>Kes.1200</span>
             <a href="#" class="btn">add to cart</a>
         </div>
 
@@ -206,7 +206,7 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star-half-alt"></i>
             </div>
-            <span>$15.99</span>
+            <span>Kes.1200</span>
             <a href="#" class="btn">add to cart</a>
         </div>
 
@@ -281,7 +281,7 @@
                 <h3>delicious food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Kes.1200</span>
             </div>
         </div>
 
@@ -301,7 +301,7 @@
                 <h3>delicious food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Kes.1200</span>
             </div>
         </div>
 
@@ -321,7 +321,7 @@
                 <h3>delicious food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Kes.1200</span>
             </div>
         </div>
 
@@ -341,7 +341,7 @@
                 <h3>delicious food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Kes.1200</span>
             </div>
         </div>
 
@@ -361,7 +361,7 @@
                 <h3>delicious food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Kes.1200</span>
             </div>
         </div>
 
@@ -381,7 +381,7 @@
                 <h3>delicious food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Kes.1200</span>
             </div>
         </div>
 
@@ -401,7 +401,7 @@
                 <h3>delicious food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Kes.1200</span>
             </div>
         </div>
 
@@ -421,7 +421,7 @@
                 <h3>delicious food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Kes.1200</span>
             </div>
         </div>
 
@@ -441,7 +441,7 @@
                 <h3>delicious food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi, accusantium.</p>
                 <a href="#" class="btn">add to cart</a>
-                <span class="price">$12.99</span>
+                <span class="price">Kes.1200</span>
             </div>
         </div>
 
@@ -608,11 +608,11 @@
 
         <div class="box">
             <h3>locations</h3>
-            <a href="#">india</a>
-            <a href="#">japan</a>
-            <a href="#">russia</a>
-            <a href="#">USA</a>
-            <a href="#">france</a>
+            <a href="#">Parklands</a>
+            <a href="#">Westlands</a>
+            <a href="#">Lavington</a>
+            <a href="#">Kileleshwa</a>
+            <a href="#">Runda</a>
         </div>
 
         <div class="box">
@@ -626,12 +626,12 @@
         </div>
 
         <div class="box">
-            <!-- <h3>contact info</h3>
-            <a href="#">+123-456-7890</a>
-            <a href="#">+111-222-3333</a>
-            <a href="#">shaikhanas@gmail.com</a>
-            <a href="#">anasbhai@gmail.com</a>
-            <a href="#">mumbai, india - 400104</a> -->
+            <h3>contact info</h3>
+            <a href="#">number1</a>
+            <a href="#">number2</a>
+            <a href="#">email1</a>
+            <a href="#">email2</a>
+            <a href="#">location</a>
         </div>
 
         <div class="box">
