--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <header>
 
-    <a href="#" class="logo"><i class="fas fa-utensils"></i>Nikki</a>
+    <a href="#" class="logo"><i class="fas fa-utensils"></i>Eatery</a>
 
     <nav class="navbar">
         <a class="active" href="#home">home</a>
